feat: 몽고디비 추가

--- a/write.html
+++ b/write.html
@@ -55,6 +55,9 @@
         </div>
         <button type="submit" class="btn btn-outline-secondary">Submit</button>
       </form>
+      <form action="/subpage" method="POST">
+        <button>goTo subpage</button>
+      </form>
     </div>
 
     <script
